Updated week 10 slides and revealed them in the index

--- a/webspring-2014-2/10.html
+++ b/webspring-2014-2/10.html
@@ -92,15 +92,14 @@
 <article class='slide slide-subhead'>
 <h1>jQuery &amp; Interactivity</h1>
 <h2>Week 10</h2>
-<p>CDGD304 - Fall 2012<br/>
- <a href='http://marthar.github.com/webfall-2012/10.html'>http://marthar.github.com/webfall-2012/10.html</a></p>
+<p>CDGD304 - Spring 2014<br/></p>
 </article>
 	
 <article class='slide slide-list'>
 <h1>Order of Business</h1>
 	<ol>
 		<li class="slide">
-			<h3>Review Homework</h3>
+			<h3>Talk about final projects</h3>
 		</li>
 		<li class="slide">
 			<h3>Intro to JavaScript</h3>
@@ -122,9 +121,6 @@
 		</li>
 		<li class="slide">
 			<h3>Hosting and Uploading your own site</h3>
-		</li>
-		<li class="slide">
-			<h3>Basic Contact Form</h3>
 		</li>
 		<li class="slide">
 			<h3>Pulling a Twitter Feed</h3>
@@ -910,7 +906,7 @@ if($_REQUEST['contact']) {
 		<h3 class='slide'>Design</h3>
 	       <ul class='slide'>
 				<li>
-	                <h3>Work on final project: you should have your HTML for 3 pages written and you should begin work on your CSS. This will take time, testing, and a lot of back-and-forth.
+	                <h3>Work on final project: you should have your HTML for 3 pages written and you should begin work on your CSS. This will take time, testing, and a lot of back-and-forth. Remember, there's only three weeks left for seniors and four for everyone else. 
 	 			    </h3>
 				</li>
 				<li>
