--- a/webspring-2014-2/index.html
+++ b/webspring-2014-2/index.html
@@ -49,9 +49,9 @@
 				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2014-2/8.html#slide-144">- homework</a></span></h3>
 			<h3><a href="9.html">Responsive Design</a>
 				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2014-2/9.html#slide-97">- homework</a></span></h3>
-			<!--<h3><a href="10.html">jQuery - Oh Crap Programming!</a>
-				<span class="homework"><a href="http://marthar.github.io/webfall-2013/10.html#slide-95">- homework</a></span></h3>
-			-->	
+			<h3><a href="10.html">jQuery</a>
+				<span class="homework"><a href="http://zacharykaiser.github.io/webspring-2014-2/10.html#slide-83">- homework</a></span></h3>
+	
 	</section>	
 
 
